<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resetPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ResetPasswordActivity">

    <!-- Top Left Decoration -->
    <ImageView
        android:id="@+id/decorationTopLeft"
        android:layout_width="101dp"
        android:layout_height="104dp"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="-30dp"
        android:contentDescription="@null"
        android:rotation="0"
        android:src="@drawable/unifor_logo01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue" />

    <!-- Bottom Right Decoration -->
    <ImageView
        android:id="@+id/decorationBottomRight"
        android:layout_width="91dp"
        android:layout_height="112dp"
        android:layout_marginEnd="-40dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@null"
        android:rotation="180"
        android:src="@drawable/unifor_logo01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/blue" />

    <!-- Bottom Left Decoration -->
    <ImageView
        android:id="@+id/decorationBottomLeft"
        android:layout_width="90dp"
        android:layout_height="84dp"
        android:layout_marginStart="-20dp"
        android:layout_marginBottom="-20dp"
        android:contentDescription="@null"
        android:src="@drawable/unifor_logo01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/blue" />

    <TextView
        android:id="@+id/labelNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:labelFor="@+id/inputNewPassword"
        android:text="@string/enter_new_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputNewPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="newPassword"
        android:background="@drawable/bg_white_rounded"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/labelNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/labelNewPassword" />

    <TextView
        android:id="@+id/labelConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/inputConfirmPassword"
        android:text="@string/confirm_new_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/inputNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputNewPassword" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="newPassword"
        android:background="@drawable/bg_white_rounded"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/inputNewPassword"
        app:layout_constraintStart_toStartOf="@+id/inputNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/labelConfirmPassword" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/blue"
        android:paddingHorizontal="32dp"
        android:text="@string/confirm_new_password_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
